# CHALLENGE-ACCEPTED

./: CMakeLists.txt  LICENSE  Listing 10.c  Listing 11.c  Listing 12.c  Listing 13.c  Listing 5.c  Listing 7.c  Listing 9.c  Listing1.c  Variant69,2.c  Variant69.c  var69.c  Вариант 69.py
Laba3/C/: CMakeLists.txt  graphic.py~  main.c  main.c~  script.sh  text.txt
Laba3/python/: 3lab69var.py
Labor1/: CMakeLists.txt  Listing 14.c  Listing 15.c  Listing 2.c  Listing 3.c  Listing 4.c  Listing 6.c  Listing 8.c  Variant69.c
Labor2/: CMakeLists.txt  Listing1.c  Listing3.c  Вариант 69.py
Labor2/69_c/: Variant69,2.c  Variant69.c
Labor4/c/: CMakeLists.txt  laba4py.py  main.c
Labor6/: Laba6.c
Labor7/: laba7.c
Labor8/: CMakeLists.txt  Listing1.c  Listing2.c  Listing3.c  Listing4.c  main.c  python.py  script.sh
